--- a/ios/Furrniture/Info.plist
+++ b/ios/Furrniture/Info.plist
@@ -83,6 +83,14 @@
 		<string>NunitoSans-Regular.ttf</string>
 		<string>NunitoSans-SemiBold.ttf</string>
 		<string>NunitoSans-SemiBoldItalic.ttf</string>
+		<string>Gelasio-Bold.ttf</string>
+		<string>Gelasio-BoldItalic.ttf</string>
+		<string>Gelasio-Italic.ttf</string>
+		<string>Gelasio-Medium.ttf</string>
+		<string>Gelasio-MediumItalic.ttf</string>
+		<string>Gelasio-Regular.ttf</string>
+		<string>Gelasio-SemiBold.ttf</string>
+		<string>Gelasio-SemiBoldItalic.ttf</string>
 	</array>
 </dict>
 </plist>
